Improved WebSpeech API

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Interview Automation System - Admin Dashboard"
+      content="Interview Automation System"
     />
-    <title>Interview Automation - Admin Dashboard</title>
+    <title>Interview Automation System</title>
     <style>
       * {
         margin: 0;
